# Simple_Caffe_Inferencer

./: README.md
caffe_inferencer/: CMakeLists.txt  ResNet_50_deploy.prototxt  driver.cpp  driver.h  global_val.h  layer.h  layer_cal.h  layer_decoder.cpp  layer_decoder.h  main.cpp  main.h  model_parser.cpp  model_parser.h  output.cpp  output.h  prototxt_parser.cpp  prototxt_parser.h  tensor.h  tokenizer.cpp  tokenizer.h  tools.cpp  tools.h
caffe_inferencer/layers/: bn.h  conv.h  eltwise.h  fc.h  general.h  pooling.h  relu.h  scale.h  softmax.h
caffemodel_converter/: CMakeLists.txt  main.cpp  main.h
examples/caffemodel/: README.md
examples/output_result/: prob.txt
image_converter/: CMakeLists.txt  Image.cpp  Image.h  interface.cpp  interface.h  main.cpp  main.h
